projects/compiler/test/typechecker/invocation/error_variadic_labeled_type_mismatch.out
Error at %FILE_NAME%:6:15
Type mismatch
  |  foo(a: 1, b: ["a", "b"])
                   ^
Expected: Int
but instead found: String
